Added /search/user/:name routing
